# yave

./: .gitignore  Cargo.toml  LICENSE  README.md  create_deb_package.sh  deb_package  default_config.yaml  netdevdown  netdevup
cli/: Cargo.toml
cli/src/: main.rs
config/: Cargo.toml
debug/: config.toml  config.yaml  tap.table.yaml  vmtest.toml  vmtest.yaml
debug/run/: .gitkeep
nft/src/: builders.rs  lib.rs
qemu/: Cargo.toml
qemu/src/: base.rs  device.rs  drive.rs  lib.rs  ovmf.rs
qmp/: Cargo.toml
qmp/src/: client.rs  lib.rs  types.rs
src/: builders.rs  cloudinit.rs  config.rs  constants.rs  context.rs  db.rs  error.rs  images.rs  installer.rs  instances.rs  interface.rs  launch.rs  lib.rs  main.rs  net.rs  newvmrunner.rs  oldvmcontext.rs  pathes.rs  presetinstaller.rs  registry.rs  run.rs  storage.rs  tools.rs  vmcontext.rs  vmrunner.rs  vms.rs  yavecontext.rs
src/contexts/: mod.rs  vm.rs  yave.rs
src/qemu/: arguments.rs  base.rs  device.rs  drive.rs  mod.rs  ovmf.rs
src/qmp/: client.rs  mod.rs
vm_types/: Cargo.toml
vm_types/src/: cloudinit.rs  launch.rs  lib.rs  utils.rs  vm.rs
web/: Cargo.toml
web/src/: auth.rs  main.rs
web/src/v1/: mod.rs  types.rs
