[package]
name = "yave"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
qmp = { path = "qmp" }
qemu = { path = "qemu" }
nft = { path = "nft" }
vm_types = { path = "vm_types" }
rtnetlink = "0.19.0"
futures-util = "0.3.31"
async-trait = "0.1.89"
nix = "0.30.1"
tempfile = "3.24.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
md-5 = "0.10.6"

[workspace]
members = ["cli", "qmp", "qemu", "nft", "vm_types", "web"]
