[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.8"
qmp = { path = "../qmp" }
yave = { path = ".." }
vm_types = { path = "../vm_types" }
nonstick = "0.1.1"
users = "0.11.0"
axum-auth = "0.8.1"
thiserror = "2.0.17"
futures-util = "0.3.31"
tokio-stream = "0.1.17"
log = "0.4.29"
env_logger = "0.11.8"
